qto-190529161035 fix table too large in the search results
Former-commit-id: 1a961020518e94e349708f75db31dd4ff6880bc5

--- a/src/perl/qto/public/themes/thme-blue/css/screen/controls/srch-grid.css
+++ b/src/perl/qto/public/themes/thme-blue/css/screen/controls/srch-grid.css
@@ -1,5 +1,5 @@
 body {
-   padding: 1% 3% 40% 3%;
+   padding: 1% 1% 40% 1%;
 }
 th {
    background-color: white;
