--- a/src/perl/qto/public/themes/thme-blue/css/screen/controls/table.css
+++ b/src/perl/qto/public/themes/thme-blue/css/screen/controls/table.css
@@ -7,7 +7,7 @@
 
 table#grid {
 	table-layout: fixed; 
-   max-width: 98% ; 
+   max-width: 96% ; 
 	border: 4px solid #F0F8FF ; 
 	border-radius: 9px;
 	background-color: #fff;
